--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     resultDiv.innerHTML = "Recherche en cours...";
 
     try {
-      const response = await fetch(`/api/pokemon/${name}`);
+      const response = await fetch(`https://pokeapi.co/api/v2/pokemon/${name}`);
 
       if (!response.ok) {
         throw new Error("Pokémon non trouvé");
